// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks component should render the task description, a button to select it, the date, and a priority field 1`] = `
<ListGroupItem
  active={false}
  disabled={false}
  variant={null}
>
  <div
    className="d-flex justify-content-between"
  >
    <div
      className="w-10"
    >
      <FormCheck
        disabled={false}
        inline={false}
        isInvalid={false}
        isValid={false}
        title=""
        type="checkbox"
      />
    </div>
    <div
      className="flex-grow-1 ml-3"
    >
      <EditText
        data-name="description"
        onSave={[Function]}
        value="Task 1"
      />
      <span
        className="text-muted"
      >
        <EditText
          data-name="due-date"
          onSave={[Function]}
          value="2020-05-22"
        />
      </span>
    </div>
    <div
      className="w-10 ml-3"
    >
      <FormControl
        as="select"
        custom={true}
        size="sm"
      >
        <option>
          1
        </option>
        <option>
          2
        </option>
        <option>
          3
        </option>
        <option>
          4
        </option>
        <option>
          5
        </option>
      </FormControl>
    </div>
  </div>
</ListGroupItem>
`;

exports[`Tasks component should render the task description, a button to select it, the date, and a priority field 2`] = `
<ListGroupItem
  active={false}
  disabled={false}
  variant={null}
>
  <div
    className="d-flex justify-content-between"
  >
    <div
      className="w-10"
    >
      <FormCheck
        disabled={false}
        inline={false}
        isInvalid={false}
        isValid={false}
        title=""
        type="checkbox"
      />
    </div>
    <div
      className="flex-grow-1 ml-3"
    >
      <EditText
        data-name="description"
        onSave={[Function]}
        value="Fill with the task description"
      />
      <span
        className="text-muted"
      >
        <EditText
          data-name="due-date"
          onSave={[Function]}
          value="No date"
        />
      </span>
    </div>
    <div
      className="w-10 ml-3"
    >
      <FormControl
        as="select"
        custom={true}
        size="sm"
      >
        <option>
          1
        </option>
        <option>
          2
        </option>
        <option>
          3
        </option>
        <option>
          4
        </option>
        <option>
          5
        </option>
      </FormControl>
    </div>
  </div>
</ListGroupItem>
`;
